src/react/import-app/match-columns/styles.css
.dataloom-match-columns {
    margin-bottom: 10px;
}

.dataloom-match-columns__container {
    width: 100%;
    height: 250px;
    overflow: scroll;
    padding-right: 2em;
}

.dataloom-match-columns table {
    border-collapse: collapse;
}   

.dataloom-match-columns th, .dataloom-match-columns td {
    border: 1px solid var(--background-modifier-border);
    padding: 0.5em;
    max-width: 20em;
    height: 1em;
}

.dataloom-match-columns--disabled {
    opacity: 0.5;
}

